Added function changeTheme
- added function to change day and night theme
- added styles for elements for night theme

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,9 @@
       <div class="nav-wrap">
         <ul class="home-nav">
           <li class="nav-item">
-            <button type="button" class="nav-btn active" data-page="home">HOME</button>
+            <button type="button" class="nav-btn active" data-page="home">
+              HOME
+            </button>
           </li>
           <li class="nav-item">
             <button type="button" class="nav-btn" data-page="library">
@@ -31,9 +33,29 @@
 
       <div class="logo">
         <a href="./">
-          <img class="logo-img" src="./images/new-favicon.png" width="32" height="32">
+          <img
+            class="logo-img"
+            src="./images/new-favicon.png"
+            width="32"
+            height="32"
+          />
           <span class="logo-name">Filmoteka</span>
         </a>
+      </div>
+
+      <div class="change_theme">
+        <button
+          type="button"
+          aria-label="Сменить тему"
+          class="change_theme--btn"
+        >
+          <img class="icon_sun" src="./images/header/icon-sun.png" alt="Day" />
+          <img
+            class="icon_moon"
+            src="./images/header/icon-moon.png"
+            alt="Night"
+          />
+        </button>
       </div>
 
       <ul class="library-nav">
