--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -8,6 +8,9 @@
     padding-bottom: 60px;
   }
 }
+.dark_mode section {
+  background-color: black;
+}
 .gallery {
   display: grid;
   grid-template-columns: 1fr;
@@ -21,6 +24,7 @@
     column-gap: 16px;
   }
 }
+
 .gallery-card {
   // height: 402px;
   margin-bottom: 10px;
@@ -40,12 +44,19 @@
   // transform: scale(1);
   // transition: transform (250ms ease-in-out);
 }
+
 .gallery-item:hover{
   cursor: pointer;
   transform: scale(1.04);
   // border: 1px solid #eeeeee;
   box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.06),
     0.5px 1px 2px rgba(0, 0, 0, 0.16);
+}
+
+.dark_mode .gallery-item {
+  -webkit-box-shadow: 0px 0px 20px -1px rgba(255, 255, 255, 0.94);
+  -moz-box-shadow: 0px 0px 20px -1px rgba(255, 255, 255, 0.94);
+  box-shadow: 0px 0px 20px -1px rgba(255, 255, 255, 0.94);
 }
 
 .gallery-info {
@@ -62,6 +73,10 @@
     font-size: 20px;
     line-height: 1.2;
   }
+}
+
+.dark_mode .gallery-title {
+  color: #ffff;
 }
 
 .gallery-text {
