--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,9 +4,7 @@
       <div class="nav-wrap">
         <ul class="home-nav">
           <li class="nav-item">
-            <button type="button" class="nav-btn active" data-page="home">
-              HOME
-            </button>
+            <button type="button" class="nav-btn active" data-page="home">HOME</button>
           </li>
           <li class="nav-item">
             <button type="button" class="nav-btn" data-page="library">
