--- a/src/sass/components/_team.scss
+++ b/src/sass/components/_team.scss
@@ -28,7 +28,7 @@
   gap: 20px;
 
   @media screen and (min-width: 768px) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 24px;
   }
   justify-content: center;
@@ -48,7 +48,7 @@
 .team-image {
   display: block;
   width: 100%;
-  height: 178px;
+  height: 120px;
   object-fit: contain;
   transition: all 0.4s;
 }
@@ -57,15 +57,23 @@
 }
 .team-info {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-areas:
+    'link name name'
+    'link role role';
+  gap: 10px;
+  justify-content: start;
+  justify-content: center;
   padding: 18px;
   text-align: center;
   font-size: 10px;
   line-height: calc(19 / 16);
   letter-spacing: 0.03em;
 }
-
+.team-git {
+  grid-area: link;
+}
 .team-name {
+  grid-area: name;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
@@ -79,6 +87,7 @@
   }
 }
 .team-role {
+  grid-area: role;
   font-weight: 400;
   font-size: 10px;
   line-height: 16px;
@@ -99,5 +108,3 @@
     height: 24px;
   }
 }
-
-
