--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer-container">
       <span class="footer-text" 
-        > &copy2023 | All Rights Reserved |
+        > &copy; 2023 | All Rights Reserved |
       </span>
       <span class="footer-text" >Developed with</span>
       <svg class="footer-icon" width="14" height="14">
