--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
             autocomplete="off"
             placeholder="Movie search"
           />
-          <button type="submit">
+          <button type="submit" aria-label="submit">
             <svg class="icon-search" width="14" height="14">
               <use href="./images/icons.svg#icon-search"></use>
             </svg>
@@ -34,6 +34,7 @@
           <img
             class="logo-img"
             src="./images/new-favicon.png"
+            alt="logo"
             width="32"
             height="32"
           />
