--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,9 @@
       <div class="nav-wrap">
         <ul class="home-nav">
           <li class="nav-item">
-            <button type="button" class="nav-btn active" data-page="home">HOME</button>
+            <button type="button" class="nav-btn active" data-page="home">
+              HOME
+            </button>
           </li>
           <li class="nav-item">
             <button type="button" class="nav-btn" data-page="library">
@@ -48,9 +50,17 @@
           aria-label="Сменить тему"
           class="change_theme--btn"
         >
-          <img class="icon_sun" src="./images/header/icon-sun.png" alt="Day" />
+          <img
+            class="icon_sun"
+            width="40"
+            height="40"
+            src="./images/header/icon-sun.png"
+            alt="Day"
+          />
           <img
             class="icon_moon"
+            width="40"
+            height="40"
             src="./images/header/icon-moon.png"
             alt="Night"
           />
