--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,14 +4,10 @@
       <div class="nav-wrap">
         <ul class="home-nav">
           <li class="nav-item">
-            <button type="button" class="nav-btn active" data-page="home">
-              HOME
-            </button>
+            <button type="button" class="nav-btn active" data-page="home">HOME</button>
           </li>
           <li class="nav-item">
-            <button type="button" class="nav-btn" data-page="library">
-              MY LIBRARY
-            </button>
+            <button type="button" class="nav-btn" data-page="library">MY LIBRARY</button>
           </li>
         </ul>
 
@@ -69,9 +65,7 @@
 
       <ul class="library-nav">
         <li class="nav-item">
-          <button type="button" class="nav-btn" data-page="watched">
-            WATCHED
-          </button>
+          <button type="button" class="nav-btn" data-page="watched">WATCHED</button>
         </li>
         <li class="nav-item">
           <button type="button" class="nav-btn" data-page="queue">QUEUE</button>
