--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,7 @@
 
 @import './spiner';
 @import './header';
+@import './components/swiper';
 @import './gallery';
 @import './components/buttonUp';
 @import './footer';
