--- a/src/sass/components/_swiper.scss
+++ b/src/sass/components/_swiper.scss
@@ -1,6 +1,11 @@
 .swiper {
-//   width: 600px;
   height: 380px;
   min-width: 320px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+}
+
+.swiper-info {
+  height: 65px;
+  cursor: pointer;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.06), 0.5px 1px 2px rgba(0, 0, 0, 0.16);
 }
