--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,9 +4,9 @@
 }
 .dark_mode header {
     background-color: black;
-    -webkit-box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 0.94);
-    -moz-box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 0.94);
-    box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 0.94);
+    // -webkit-box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 0.94);
+    // -moz-box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 0.94);
+    // box-shadow: 0px 0px 10px -1px rgba(255, 255, 255, 0.94);
 }
 
 .header .container {
