--- a/src/partials/swiper.html
+++ b/src/partials/swiper.html
@@ -1,16 +1,8 @@
-<!-- Slider main container -->
+<h2 class="visually-hidden">Swiper</h2>
 <div class="container">
   <div class="swiper">
-    <!-- Additional required wrapper -->
     <div class="swiper-wrapper"></div>
-    <!-- If we need pagination -->
-    <!-- <div class="swiper-pagination"></div> -->
-
-    <!-- If we need navigation buttons -->
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
-
-    <!-- If we need scrollbar -->
-    <!-- <div class="swiper-scrollbar"></div> -->
   </div>
 </div>
