--- a/src/sass/components/_swiper.scss
+++ b/src/sass/components/_swiper.scss
@@ -9,3 +9,7 @@
   cursor: pointer;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.06), 0.5px 1px 2px rgba(0, 0, 0, 0.16);
 }
+
+.dark_mode .swiper-title {
+  color: #ffff;
+}
