--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -70,6 +70,9 @@
         <li class="nav-item">
           <button type="button" class="nav-btn" data-page="queue">QUEUE</button>
         </li>
+        <li class="nav-item">
+          <button type="button" class="nav-btn" data-page="login">LOGIN</button>
+        </li>
       </ul>
     </div>
   </div>
