--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @import './utils/vars';
 @import './spiner';
 @import './header';
+@import './components/login';
 @import './components/swiper';
 @import './gallery';
 @import './components/buttonUp';
